adding passport, express-session, pass-github
